# nhsnet

./: .gitignore  LICENSE  README.md  example_cnn_nhsnet.py  inference_example.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
docs/: REFERENCES.md
examples/: example_cnn_nhsnet.py  inference_example.py  train_cifar.py
nhsnet/: __init__.py
nhsnet/examples/: example_cnn_nhsnet.py  inference_example.py  train_cnn_nhsnet.py
nhsnet/layers/: __init__.py  dynamic_neurogenesis.py  hebbian_conv.py  hh_gating.py  structured_sparse.py
nhsnet/models/: __init__.py  cnn_nhsnet.py  nhsnet.py
nhsnet/utils/: __init__.py  pruning.py
