[metadata]
name = nhsnet
version = 0.1.0
description = NHS-Net: A Biologically-Inspired Neural Architecture
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/raktim-mondol/nhsnet
author = Raktim Mondol
author_email = raktimmondol@gmail.com
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
python_requires = >=3.7
install_requires =
    torch>=1.9.0
    numpy>=1.19.2
    scipy>=1.7.0
    torchvision>=0.10.0
    tqdm>=4.62.0
    wandb>=0.12.0

[options.extras_require]
dev =
    pytest>=6.2.5
    black>=21.5b2
    isort>=5.8.0
    flake8>=3.9.2

[flake8]
max-line-length = 88
extend-ignore = E203